<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText

            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/vien"
            android:hint="@string/edt_username" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/vien"
            android:hint="@string/edt_password" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="80dp"
            android:background="@drawable/vien"
            android:text="@string/bt_login" />
    </LinearLayout>
    </RelativeLayout>

</layout>