<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide04"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide05"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide06"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide07"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="@id/guide01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tv_title"
            android:textSize="40dp" />

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="50dp"
            android:layout_height="match_parent"

            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/ic_baseline_shopping_cart_24">

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/tron"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:text="@string/tv_welcome"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guide02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide01"

        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"

        android:background="@drawable/vien"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guide03"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide02">

        <ListView
            android:id="@+id/lvContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guide04"
        app:layout_constraintEnd_toEndOf="@id/guide07"
        app:layout_constraintStart_toStartOf="@id/guide06"
        app:layout_constraintTop_toTopOf="@id/guide03">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"

            android:layout_margin="20dp"
            android:text="@string/tv_totalprice" />

        <TextView
            android:layout_margin="20dp"
            android:id="@+id/tv_dollar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="0$"
             />
    </RelativeLayout>
    <Button
        android:layout_margin="20dp"
        android:id="@+id/btorder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bt_order"
        android:textStyle="bold"
        android:background="@drawable/vien"
        app:layout_constraintBottom_toBottomOf="@id/guide05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide04"/>
    <TextView
        android:textAlignment="center"
        android:id="@+id/tv_thankyou"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide05"
        android:text=""
        android:gravity="center_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>